<resources>
    <string name="app_name">Anti theft Aplication</string>
    <string name="logIn">login</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="not_a_member_sign_up">Not a member? Sign Up</string>
    <string name="password">Password</string>
    <string name="anti_theft_application">Anti -Theft Application</string>
    <string name="anti_theft_detection">Anti-Theft Detection</string>
    <string name="duplicate_contact_remover">Duplicate Contact Remover</string>
    <string name="already_have_account_login">Already have Account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password_register">Password</string>
    <string name="register">Register</string>
    <string name="register_button">Register</string>
    <string name="change_password">Change</string>
    <string name="confirm_password_forget">Confirm Password</string>
    <string name="new_password_forget">New Password</string>
    <string name="forget_password_login">Forget Password?</string>
    <string name="contact_backup">Contact Backup</string>
    <string name="contact_restore">Contact Restore</string>
    <string name="duplicate_contact_remover1">Duplicate Contact Remover</string>
    <string name="title_activity_ata_main_page">ATA_main_page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="alternate_number">Alternate number</string>
    <string name="title_activity_contact_textview">contact_textview</string>
    <string name="success_message">Successfully registred</string>

</resources>
