<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:paddingBottom="0dp"
    android:paddingTop="0dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:orientation="vertical"
    tools:context="com.example.kd.ata.Duplicate_contact_Remover_homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:onClick="duplicateclick"
            android:scaleType="centerInside"
            android:background="@drawable/duplicate1"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textview_style_homepage"
            android:textSize="20sp"
            android:text="@string/duplicate_contact_remover1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:background="@drawable/backup"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textview_style_homepage"
            android:textSize="20sp"
            android:text="@string/contact_backup" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:background="@drawable/restore"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />
        <TextView
            android:id="@+id/textView9"
            style="@style/Textview_style_homepage"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_restore" />


    </LinearLayout>
    <ProgressBar
        android:id="@+id/load"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="125dp"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>





























